force-app/main/default/objects/trailheadapp__User_Badge__c/fields/Cognizant_User__c.field-meta.xml
<CustomField>
    <fullName>Cognizant_User__c</fullName>
    <description>Created to help build dashboards and reports for the AIM program and any other Cognizant users using myTrailhead.</description>
    <formula>trailheadapp__User__r.Cognizant_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Will be marked as TRUE if user&apos;s email is related to Cognizant</inlineHelpText>
    <label>Cognizant User</label>
    <type>Checkbox</type>
</CustomField>