force-app/main/default/objects/trailheadapp__User_Badge__c/fields/myTrailhead_CPQ_Solution_Training__c.field-meta.xml
<CustomField>
    <fullName>myTrailhead_CPQ_Solution_Training__c</fullName>
    <description>Used for filtering myT content.</description>
    <formula>trailheadapp__Badge__r.myT_CPQ_Solution_Training__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If marked True, this Badge or User Badge is related to ATG’s myTrailhead CPQ Solution Training. </inlineHelpText>
    <label>myTrailhead CPQ Solution Training</label>
    <type>Checkbox</type>
</CustomField>