force-app/main/default/objects/trailheadapp__User_Badge__c/listViews/myTrailhead_Badges.listView-meta.xml
<ListView>
    <fullName>myTrailhead_Badges</fullName>
    <columns>NAME</columns>
    <columns>trailheadapp__User__c</columns>
    <columns>trailheadapp__Badge__c</columns>
    <columns>trailheadapp__Status__c</columns>
    <columns>trailheadapp__Assigned_Date__c</columns>
    <columns>trailheadapp__First_Attempted_Date__c</columns>
    <columns>trailheadapp__Last_Attempted_Date__c</columns>
    <columns>trailheadapp__Finished_Date__c</columns>
    <columns>trailheadapp__Assigned_to_Complete__c</columns>
    <columns>trailheadapp__Badge_Icon__c</columns>
    <filterScope>Mine</filterScope>
    <label>myTrailhead Badges</label>
</ListView>